Changing name of folder

--- a/kaggle_competition_dcamposb_notebook.ipynb
+++ b/kaggle_competition_dcamposb_notebook.ipynb
@@ -698,7 +698,9 @@
     "    SelectedFeatures_DF = pd.DataFrame(np.array(imp_feat.index))\n",
     "    \n",
     "    # Storing the Datasets for Each Target \n",
-    "    # I am storinf them because if the process failed I could have the features in a csv file stored for each iteration\n",
+    "    # I am storinf them because if the process failed \n",
+    "    # I could have the features in a csv file stored for each iteration, in case the process failed, now I have \n",
+    "    # a list of optimal features according to the Lasso R. for each Target value \n",
     "    file_name  = \"SF\"+str(i)+\".csv\"\n",
     "    path = \"optimal_feature_for_targets\" + \"/\" + file_name\n",
     "    SelectedFeatures_DF.to_csv(path, sep='\\t',index=False)"
@@ -728,6 +730,8 @@
     "y_val = pd.DataFrame(y_val.values)\n",
     "y_val.columns = train.columns[804:]\n",
     "\n",
+    "\n",
+    "# Storing the New Dataframes based on Optimal Features \n",
     "new_x_train = []\n",
     "new_x_val =[]\n",
     "new_x_test = []\n",
