change name of csv files

--- a/kaggle_competition_dcamposb_notebook.ipynb
+++ b/kaggle_competition_dcamposb_notebook.ipynb
@@ -647,27 +647,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LogisticRegression with Lasso penalty picked for Class_0 204 variables and eliminated the other 599 variables\n",
-      "LogisticRegression with Lasso penalty picked for Class_1 203 variables and eliminated the other 600 variables\n",
-      "LogisticRegression with Lasso penalty picked for Class_2 200 variables and eliminated the other 603 variables\n",
-      "LogisticRegression with Lasso penalty picked for Class_3 194 variables and eliminated the other 609 variables\n",
-      "LogisticRegression with Lasso penalty picked for Class_4 199 variables and eliminated the other 604 variables\n",
-      "LogisticRegression with Lasso penalty picked for Class_5 176 variables and eliminated the other 627 variables\n",
-      "LogisticRegression with Lasso penalty picked for Class_6 151 variables and eliminated the other 652 variables\n",
-      "LogisticRegression with Lasso penalty picked for Class_7 162 variables and eliminated the other 641 variables\n",
-      "LogisticRegression with Lasso penalty picked for Class_8 85 variables and eliminated the other 718 variables\n",
-      "LogisticRegression with Lasso penalty picked for Class_9 121 variables and eliminated the other 682 variables\n",
-      "LogisticRegression with Lasso penalty picked for Class_10 137 variables and eliminated the other 666 variables\n",
-      "LogisticRegression with Lasso penalty picked for Class_11 186 variables and eliminated the other 617 variables\n",
-      "LogisticRegression with Lasso penalty picked for Class_12 190 variables and eliminated the other 613 variables\n",
-      "LogisticRegression with Lasso penalty picked for Class_13 44 variables and eliminated the other 759 variables\n"
+      "LogisticRegression with Lasso penalty picked for the Class_0 204 optimal variables and eliminated the other 599 variables\n",
+      "LogisticRegression with Lasso penalty picked for the Class_1 203 optimal variables and eliminated the other 600 variables\n",
+      "LogisticRegression with Lasso penalty picked for the Class_2 200 optimal variables and eliminated the other 603 variables\n",
+      "LogisticRegression with Lasso penalty picked for the Class_3 194 optimal variables and eliminated the other 609 variables\n",
+      "LogisticRegression with Lasso penalty picked for the Class_4 199 optimal variables and eliminated the other 604 variables\n",
+      "LogisticRegression with Lasso penalty picked for the Class_5 176 optimal variables and eliminated the other 627 variables\n",
+      "LogisticRegression with Lasso penalty picked for the Class_6 151 optimal variables and eliminated the other 652 variables\n",
+      "LogisticRegression with Lasso penalty picked for the Class_7 162 optimal variables and eliminated the other 641 variables\n",
+      "LogisticRegression with Lasso penalty picked for the Class_8 85 optimal variables and eliminated the other 718 variables\n",
+      "LogisticRegression with Lasso penalty picked for the Class_9 121 optimal variables and eliminated the other 682 variables\n",
+      "LogisticRegression with Lasso penalty picked for the Class_10 137 optimal variables and eliminated the other 666 variables\n",
+      "LogisticRegression with Lasso penalty picked for the Class_11 186 optimal variables and eliminated the other 617 variables\n",
+      "LogisticRegression with Lasso penalty picked for the Class_12 190 optimal variables and eliminated the other 613 variables\n",
+      "LogisticRegression with Lasso penalty picked for the Class_13 44 optimal variables and eliminated the other 759 variables\n"
      ]
     }
    ],
@@ -689,7 +689,7 @@
     "    \n",
     "    # Takign into consdieration each coefficient \n",
     "    coef = pd.Series(reg.coef_[0], index = master_training.columns)\n",
-    "    print(\"LogisticRegression with Lasso penalty picked for Class_\" + str(i) + \" \" + str(sum(coef != 0)) + \" variables and eliminated the other \" +  str(sum(coef == 0)) + \" variables\")\n",
+    "    print(\"LogisticRegression with Lasso penalty picked for the Class_\" + str(i) + \" \" + str(sum(coef != 0)) + \" optimal variables and eliminated the other \" +  str(sum(coef == 0)) + \" variables\")\n",
     "    \n",
     "    # Create an array of Important Features  and append to list \n",
     "    imp_feat=coef.loc[coef!=0]\n",
@@ -702,7 +702,7 @@
     "    # I could have the features in a csv file stored for each iteration, in case the process failed, now I have \n",
     "    # a list of optimal features according to the Lasso R. for each Target value \n",
     "    file_name  = \"SF\"+str(i)+\".csv\"\n",
-    "    path = \"optimal_feature_for_targets\" + \"/\" + file_name\n",
+    "    path = \"optimal_feature_lists_for_targets\" + \"/\" + file_name\n",
     "    SelectedFeatures_DF.to_csv(path, sep='\\t',index=False)"
    ]
   },
